# integration-automater

./: README.md  instructions.j2  listen.py  pyproject.toml
